# ai-gradio

./: .cursorrules  .dev.vars.example  .gitignore  CLAUDE.md  README.md  app.py  load-context.ts  pyproject.toml  tailwind.config.ts  worker.ts  wrangler.toml
.react-router/types/: +register.ts
.react-router/types/app/routes/+types/: api.generate.ts
ai-gradio-js/: CLAUDE.md  deploy.sh  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  worker-configuration.d.ts  wrangler.toml
ai-gradio-js/app/: root.tsx  routes.ts  types.ts
ai-gradio-js/app/components/: ModelSelector.tsx  QueryInput.tsx  ResultDisplay.tsx
ai-gradio-js/app/constants/: models.ts
ai-gradio-js/app/lib/: kroki.ts
ai-gradio-js/app/lib/llm/: anthropic.ts  deepseek.ts  gemini.ts  index.ts  openai.ts
ai-gradio-js/app/routes/: _index.tsx  api.generate.tsx  api.llm.tsx
ai-gradio-js/app/styles/: theme.css
ai-gradio-js/app/types/: index.ts
ai-gradio-js/server/: index.ts
ai-gradio-py/: README.md
ai-gradio-py/ai_gradio/: __init__.py  integrated_gradio.py
ai_gradio/: __main__.py  api_llm.py  integrated_gradio.py  logging_config.py
ai_gradio/providers/: __init__.py  browser_use_gradio.py  crewai_gradio.py  groq_gradio.py  jupyter_agent_gradio.py  kokoro_gradio.py  langchain_gradio.py  mistral_gradio.py  nvidia_gradio.py  together_gradio.py  transformers_gradio.py
app/: entry.client.tsx  root.tsx  types.ts
app/components/: ModelSelector.tsx  QueryInput.tsx
app/constants/: models.ts
app/lib/llm/: deepseek.ts  gemini.ts  index.ts  openai.ts
app/routes/: api.generate.tsx  api.llm.tsx
app/styles/: theme.css
app/types/: index.ts
old/ai-gradio-py/ai_gradio/: api_llm.py  integrated_gradio.py
(+1 files in other folders)
