[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-gradio"
version = "0.2.36"
description = "A Python package for creating Gradio applications with AI models"
authors = [
    { name = "AK", email = "ahsen.khaliq@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "numpy",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.41.0; sys_platform != 'darwin'",
    "gradio>=5.9.1",
    "gradio-webrtc",
    "websockets",
    "twilio",
    "Pillow",
    "opencv-python",
    "librosa",
    "pydub",
    "gradio_webrtc[vad]",
    "numba==0.60.0",
    "python-dotenv",
    "modelscope-studio",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "openai>=1.58.1",
    "google-generativeai>=0.8.3",
    "anthropic<=0.45.2",
    "transformers>=4.37.0",
    "einops>=0.8.0",
    "pyvips-binary>=8.16.0",
    "pyvips>=2.2.3",
    "torchvision>=0.18.1",
    "langchain>=0.3.9",
    "langchain-openai>=0.0.2",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0,<3.0.0",
    "requests>=2.31.0",
    "huggingface-hub>=0.27.1",
    "mistralai",
    "replicate>=1.0.4"
]

[project.urls]
homepage = "https://github.com/AK391/ai-gradio"
repository = "https://github.com/AK391/ai-gradio"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8"
]

[project.scripts]
start = "ai_gradio.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["ai_gradio"]

